export type OrgRole = 'OWNER' | 'ADMIN' | 'MEMBER';

export const ROLE_WEIGHT = {
  OWNER: 3,
  ADMIN: 2,
  MEMBER: 1,
};