@startuml SPHERE_DB

' =====================
' ENUMS
' =====================

enum Role {
  ADMIN
  USER
}

enum OrgRole {
  OWNER
  ADMIN
  MEMBER
}

enum GroupRole {
  ADMIN
  EDITOR
  VIEWER
}

' =====================
' CORE ENTITIES
' =====================

class User {
  firstName: String
  lastName: String
  email: String
  username: String
  password: String
  phone: String
  avatar: String [Optional]
  address: String [Optional]
  postalCode: String [Optional]
  role: Role
}

class Organization {
  name: String
  displayName: String
  description: String [Optional]
  avatar: String [Optional]
  createdAt: Date
  updatedAt: Date
}

class Group {
  name: String
  displayName: String [Optional]
  description: String [Optional]
  createdAt: Date
  updatedAt: Date
}

' =====================
' MEMBERSHIPS
' =====================

class OrganizationMembership {
  role: OrgRole
  joinedAt: Date
}

class GroupMembership {
  role: GroupRole
  joinedAt: Date
}

' =====================
' PRICING DOMAIN
' =====================

class PricingCollection {
  name: String
  lastUpdated: Date
}

class Pricing {
  name: String
  version: String
  extractionDate: Date
  url: String [Optional]
  currency: String
  yaml: String
}

class CollectionAnalytics {
  evolutionOfPlans: double[][]
  evolutionOfFeatures: double[][]
  evolutionOfAddOns: double[][]
  evolutionOfConfigurationSpaceSize: double[][]
}

class PricingAnalytics {
  numberOfFeatures: integer
  numberOfInformationFeatures: integer
  numberOfIntegrationFeatures: integer
  numberOfIntegrationApiFeatures: integer
  numberOfIntegrationExtensionFeatures: integer
  numberOfIntegrationIdentityProviderFeatures: integer
  numberOfIntegrationWebSaaSFeatures: integer
  numberOfIntegrationMarketplaceFeatures: integer
  numberOfIntegrationExternalDeviceFeatures: integer
  numberOfDomainFeatures: integer
  numberOfAutomationFeatures: integer
  numberOfBotAutomationFeatures: integer
  numberOfFilteringAutomationFeatures: integer
  numberOfTrackingAutomationFeatures: integer
  numberOfTaskAutomationFeatures: integer
  numberOfManagementFeatures: integer
  numberOfGuaranteeFeatures: integer
  numberOfSupportFeatures: integer
  numberOfPaymentFeatures: integer
  numberOfUsageLimits: integer
  numberOfRenewableUsageLimits: integer
  numberOfNonRenewableUsageLimits: integer
  numberOfResponsiveUsageLimits: integer
  numberOfTimeDrivenUsageLimits: integer
  numberOfPlans: integer
  numberOfFreePlans: integer
  numberOfPaidPlans: integer
  numberOfAddOns: integer
  numberOfReplacementAddOns: integer
  numberOfExtensionAddOns: integer
  configurationSpaceSize: integer
  minSubscriptionPrice: double
  maxSubscriptionPrice: double
}

' =====================
' RELATIONSHIPS
' =====================

PricingCollection "1" -- "0..*" Pricing : belongsTo

PricingCollection "1" -- "1" CollectionAnalytics
Pricing "1" -- "1" PricingAnalytics

User "1" -- "0..*" OrganizationMembership : member of
Organization "1" -- "0..*" OrganizationMembership : has

Organization *-- Group

Group *-- Pricing
Group *-- PricingCollection

User "1" -- "0..*" GroupMembership : member of
Group "1" -- "0..*" GroupMembership : has

@enduml